[project]
name = "flowstate-creator-nodes"
description = "The ultimate suite of streamlined ComfyUI nodes for creative professionals."
version = "0.0.6"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/flowstateeng/FlowState-Creator-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "flowstateeng"
DisplayName = "🌊 FlowState-Creator-Suite"
Icon = "./imgs/FlowState Creator Suite - Comfy Registry Icon.png"
