[project]
name = "flowstate-creator-nodes"
description = "The ultimate suite of streamlined ComfyUI nodes for creative professionals."
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = [
    "git+https://github.com/kijai/ComfyUI-KJNodes.git"
]

[project.urls]
Repository = "https://github.com/flowstateeng/FlowState-Creator-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "flowstateeng"
DisplayName = "🌊 FlowState-Creator-Suite"
Icon = "https://github.com/flowstateeng/FlowState-Creator-Nodes/blob/main/imgs/FlowState%20Creator%20Suite%20-%20Comfy%20Registry%20Icon.png"
Banner = "https://github.com/flowstateeng/FlowState-Creator-Nodes/blob/main/imgs/FlowState-Creator-Nodes-Banner.png"

